Making the first steps to the front-end

--- a/angular.json
+++ b/angular.json
@@ -92,7 +92,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           }
         }
       }
