--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -8,7 +8,9 @@
     ]
   },
   "include": [
+    "tests/**/*.spec.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "tests/**/*.d.ts",
   ]
 }
