--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "flowbite": "^2.3.0",
     "ngx-mask": "^17.0.8",
     "rxjs": "~7.8.0",
